# diviqra-guard

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.py  start.sh
classifier/: evaluate.py  export_onnx.py  prepare_data.py  train.py
diviqra_guard/: __init__.py  async_client.py  client.py  exceptions.py  models.py
diviqra_guard/integrations/: __init__.py  fastapi.py  langchain.py  openai.py
docs/: api_reference.md  architecture.md  owasp_mapping.md  quickstart.md
migrations/: 0001_guard_events.sql  0002_stripe_billing.sql  0003_guard_whatsapp_numbers.sql
redteam/: reporter.py  runner.py  scheduler.py  scorer.py
redteam/attacks/: __init__.py  direct_injection.py  hindi_attacks.py  indirect_injection.py  jailbreak.py  pii_extraction.py  system_prompt_leak.py  tool_misuse.py
redteam/corpus/: custom.py  loader.py
routers/: billing.py  sse.py  webhooks.py  whatsapp.py
service/: agent_rules.py  config.py  events.py  main.py  models.py  scan_quota.py  scanner.py
service/walls/: __init__.py
service/walls/wall0/: entropy.py  normaliser.py
service/walls/wall1/: __init__.py  behavioural.py  classifier.py  hindi.py  orchestrator.py  pii.py  ratelimiter.py  rules.py  semantic_drift.py
service/walls/wall2/: cache.py  intent_coherence.py  llm_judge.py  orchestrator.py  prompts.py
tests/: test_api.py  test_billing.py  test_redteam.py  test_wall1.py  test_wall2.py
