[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "diviqra-guard"
version = "1.0.2"
description = "LLM firewall for AI agents — by Diviqra"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Diviqra Technologies", email = "dev@diviqra.com"},
]
keywords = ["llm", "security", "firewall", "prompt-injection", "ai-safety", "owasp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
service = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "onnxruntime>=1.18",
    "transformers>=4.40",
    "structlog>=24.0",
    "stripe>=15.0",
]
redteam = [
    "celery[redis]>=5.3",
]
classifier = [
    "torch>=2.3",
    "transformers>=4.40",
    "datasets>=2.19",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "scikit-learn>=1.5",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://guard.diviqra.com"
Repository = "https://github.com/diviqra-guard/diviqra-guard"
Documentation = "https://guard.diviqra.com/docs"
"Bug Tracker" = "https://github.com/diviqra-guard/diviqra-guard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["diviqra_guard*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=service --cov=diviqra_guard --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*", "classifier/*", "redteam/*"]
